<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImportExcel">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="monospace"
        android:text="@string/attention"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="263dp"
        android:layout_height="21dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/text_caution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lvcontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:padding="1dp"
        android:weightSum="5"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/textView3">

        <TextView
            android:id="@+id/text_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stu_id"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/stu_name"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text_absence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/stu_absence"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/stu_answer"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/text_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/stu_average"
            android:textColor="#000000"
            android:textSize="13sp" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/textOut"
        app:layout_constraintTop_toTopOf="@id/lvcontainer"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/buttonImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="onImportClick"/>
</android.support.constraint.ConstraintLayout>