<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lvh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="horizontal"

        android:weightSum="5" >

        <TextView
            android:id="@+id/result_text_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/stu_id"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/result_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/stu_name"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/result_text_absence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/stu_absence"
            android:padding="3dp"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/result_text_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/stu_answer"
            android:padding="3dp"
            android:textColor="#000000"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/result_text_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/stu_average"
            android:padding="3dp"
            android:textColor="#000000"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>
