<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentResult">

    <TableLayout
        android:id="@+id/result_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/row_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >

            <TextView
                android:id="@+id/title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stu_id"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stu_name"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/title_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stu_absence"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/title_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stu_answer"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/title_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stu_average"
                android:textColor="#000000"
                android:textSize="18sp"  />

        </TableRow>

        <TableRow
            android:id="@+id/row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row1_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/row1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row1_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row1_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row1_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

        </TableRow>

        <TableRow
            android:id="@+id/row_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/row2_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/row2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row2_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row2_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row2_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />
        </TableRow>

        <TableRow
            android:id="@+id/row_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/row3_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/row3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row3_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row3_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row3_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />
        </TableRow>


        <TableRow
            android:id="@+id/row_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/row4_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/row4_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row4_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row4_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row4_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />
        </TableRow>


        <TableRow
            android:id="@+id/row_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/row5_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/row5_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row5_absence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row5_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />

            <TextView
                android:id="@+id/row5_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"  />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/button_refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="440dp"
        android:background="@android:color/transparent"
        android:onClick="refreshResult"
        android:src="@android:drawable/ic_menu_rotate"
        android:tint="@color/colorPrimary" />


</FrameLayout>